Issue #27419: Standard __import__() no longer look up "__import__" in globals or builtins for importing submodules or "from import".  Fixed handling an error of non-string package name.